src/objects/Creative__c.object
<CustomObject>
    <description>Creative material produced by Marketing. There are two types - Parent Assets and Public Ads. A Parent Asset needs Legal&apos;s approval but may need additional work (like the overlay of an end tag) before publishing. A Public Ad is the final creative piece with a defined DMA and an end tag, if applicable. Public Ads with end tags (local ads) need the approval of the relevant doctors.</description>
    <fields>
        <fullName>Approval_Reminder_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not intended for the user - used to control the sending of reminder emails to Legal.</description>
        <label>Approval Reminder flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_By_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes the asset has been approved by Legal (applies to Parent Assets)</description>
        <label>Approved By Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <description>True is either a (Parent Asset is approved by Legal) OR a (Public Ad has a DoctorApprovalStatus of Approved or a checked ForceApproval checkbox)</description>
        <formula>OR(

    AND(
        RecordType.Name = &quot;Parent Asset&quot;,
        Approved_By_Legal__c = true
        ),

    AND(
        RecordType.Name = &quot;Public Ad&quot;,
        OR(
           TEXT(Doctor_Approval_Status__c) = &quot;Approved&quot;,
           Force_Approval__c
           )
        )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DMA</label>
        <referenceTo>DMA__c</referenceTo>
        <relationshipLabel>Creative</relationshipLabel>
        <relationshipName>Creative</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor_Approval_Status__c</fullName>
        <label>Doctor Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never Submitted</fullName>
                    <default>true</default>
                    <label>Never Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>60s</fullName>
                </value>
                <value>
                    <fullName>30s</fullName>
                </value>
                <value>
                    <fullName>15s</fullName>
                </value>
                <value>
                    <fullName>2m</fullName>
                </value>
                <value>
                    <fullName>Longform</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Force_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An option for Marketing to force approval of a Public Ad without submitting to doctors for approval</description>
        <label>Force Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Approval_Due_Date__c</fullName>
        <description>Should be set to one week after the initiation of the Legal Approval Process - controlled by a Workflow rule</description>
        <label>Legal Approval Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_to_media__c</fullName>
        <label>Link to media</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Media_type__c</fullName>
        <label>Media type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Long-form TV</fullName>
                </value>
                <value>
                    <fullName>TV Doc Spot</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Print Newspaper</fullName>
                </value>
                <value>
                    <fullName>Print Magazine</fullName>
                </value>
                <value>
                    <fullName>Web Display</fullName>
                </value>
                <value>
                    <fullName>Web Content</fullName>
                </value>
                <value>
                    <fullName>Web Video</fullName>
                </value>
                <value>
                    <fullName>Web SEM</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Direct Mail CCMS</fullName>
                </value>
                <value>
                    <fullName>Direct Mail S4</fullName>
                </value>
                <value>
                    <fullName>Center Marketing S4</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>GLO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>The calculated name of the Creative object - it&apos;s a concatenation of other fields on the object - controlled by a Workflow rule</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note (optional)</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Asset</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Creative__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Asset</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Creative__c</referenceTo>
        <relationshipLabel>Creative</relationshipLabel>
        <relationshipName>Public_Ad</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Creative_Project__c</referenceTo>
        <relationshipLabel>Creative</relationshipLabel>
        <relationshipName>Creative</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ready_for_use__c</fullName>
        <description>True if the the Creative is both Approved AND not Retired</description>
        <formula>AND(Approved__c = true, Retired__c = false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready for use?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retire_Date__c</fullName>
        <label>Retire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retirement_Reason__c</fullName>
        <label>Retirement Reason</label>
        <length>1023</length>
        <type>LongTextArea</type>
    </fields>
    <label>Creative</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project__c</columns>
        <columns>Parent_Asset__c</columns>
        <columns>DMA__c</columns>
        <columns>Media_type__c</columns>
        <columns>Duration__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Ready_for_use__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Legal_Compliance_Creative</fullName>
        <filterScope>Queue</filterScope>
        <label>Legal and Compliance</label>
        <queue>Legal_Compliance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Parent_Assets</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Project__c</columns>
        <columns>Media_type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approved_By_Legal__c</columns>
        <columns>Retired__c</columns>
        <columns>Ready_for_use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Creative__c.Parent_Asset</value>
        </filters>
        <label>Parent Assets</label>
    </listViews>
    <listViews>
        <fullName>Public_Ads</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Project__c</columns>
        <columns>Media_type__c</columns>
        <columns>Duration__c</columns>
        <columns>DMA__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Doctor_Approval_Status__c</columns>
        <columns>Retired__c</columns>
        <columns>Ready_for_use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Creative__c.Public_Ad</value>
        </filters>
        <label>Public Ads</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{0}</displayFormat>
        <label>Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creative</pluralLabel>
    <recordTypes>
        <fullName>Parent_Asset</fullName>
        <active>true</active>
        <description>An asset requiring Legal&apos;s approval, prior to producing the final, Public Ad</description>
        <label>Parent Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Public_Ad</fullName>
        <active>true</active>
        <description>A final creative piece intended for public consumption. Requires approval of doctors if end tags are present.</description>
        <label>Public Ad</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>